UI improvements and general corrections: - use system look and feel (instead of Swing "Metal" theme) - redesign GameOverView   + return choice of replay or not   + create Grid column layout and add border - improve WelcomeView in a similar manner