@@ -1,24 +1,56 @@
 package view;
 
+import game.Constants;
 import util.HighScoreManager;
 
 import javax.swing.*;
+import javax.swing.border.EmptyBorder;
+import java.awt.*;
 import java.awt.event.KeyAdapter;
 import java.awt.event.KeyEvent;
 
 public class GameOverView extends JDialog {
-  private static final String FORMAT_HIGH_SCORE = "Excellent %s! You have beaten the highscore\nby surviving for %s seconds.";
-  private static final String FORMAT_WON = "Well done, %s. You have survived for %s seconds.\nThe highscore is by %s with %s seconds.";
+  private Boolean replay = false;
 
-  public GameOverView(String playerName, String playerTime, String highscoreName, String highscoreTime) {
-    setTitle("Game Over");
-    JLabel lblResult = new JLabel();
-    if (Float.parseFloat(playerTime) >= Float.parseFloat(highscoreTime)) {
-      lblResult.setText(String.format(FORMAT_HIGH_SCORE, playerName, playerTime));
+  public GameOverView(Frame owner, String playerName, String playerTime, String highScoreName, String highScoreTime) {
+    super(owner, "Game Over", true);
+    initializeComponents(playerName, playerTime, highScoreName, highScoreTime);
+    setVisible(true);
+  }
+
+  private void initializeComponents(String playerName, String playerTime, String highScoreName, String highScoreTime) {
+    JComponent contentPane = (JComponent) getContentPane();
+    GridLayout layout = new GridLayout(4, 1);
+    layout.setVgap(10);
+    setLayout(layout);
+    contentPane.setBorder(new EmptyBorder(20, 20, 20, 20));
+
+    boolean isHighScore = Float.parseFloat(playerTime) >= Float.parseFloat(highScoreTime);
+
+    JLabel lblWelcome = new JLabel("Game Over");
+    lblWelcome.setFont(new Font("Arial", Font.BOLD, 20));
+    lblWelcome.setAlignmentX(Component.CENTER_ALIGNMENT);
+    add(lblWelcome);
+
+    JLabel lblCongratulations = new JLabel();
+    lblCongratulations.setFont(new Font("Arial", Font.PLAIN, 20));
+    if (isHighScore) {
+      lblCongratulations.setText("Congratulations, %s! You have beaten the high score.".formatted(playerName));
     } else {
-      lblResult.setText(String.format(FORMAT_WON, playerName, playerTime, highscoreName, highscoreTime));
+      lblCongratulations.setText("Well done, %s.".formatted(playerName));
     }
+    add(lblCongratulations);
+
+    JLabel lblResult = new JLabel();
+    lblResult.setFont(new Font("Arial", Font.PLAIN, 20));
+    lblResult.setText("You survived for %s seconds.".formatted(playerTime));
     add(lblResult);
+
+    JLabel lblPrevHighScore = new JLabel();
+    lblPrevHighScore.setFont(new Font("Arial", Font.PLAIN, 20));
+    lblPrevHighScore.setText("The previous high score was %ss by %s.".formatted(highScoreTime, highScoreName));
+    add(lblPrevHighScore);
+
     pack();
     setLocationRelativeTo(null);
     addKeyListener(new KeyAdapter() {
@@ -27,21 +59,26 @@ public class GameOverView extends JDialog {
         onKeyDownHandler(e);
       }
     });
-    setVisible(true);
   }
 
   private void onKeyDownHandler(KeyEvent e) {
     if (e.getKeyCode() == KeyEvent.VK_ENTER) {
+      replay = true;
       this.dispose();
     } else if (e.getKeyCode() == KeyEvent.VK_DELETE) {
       resetScore();
     } else if (e.getKeyCode() == KeyEvent.VK_ESCAPE) {
+      replay = false;
       this.dispose();
     }
   }
 
   private void resetScore() {
-    HighScoreManager.writeAttribute("name", "XXX");
-    HighScoreManager.writeAttribute("time", "00.0");
+    HighScoreManager.writeAttribute(Constants.HIGH_SCORE_NAME, "XXX");
+    HighScoreManager.writeAttribute(Constants.HIGH_SCORE_TIME, "0.0");
+  }
+
+  public Boolean getReplay() {
+    return replay;
   }
 }
